|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Nov 2008, PHP 5.2.7
- Added logging option for error_log to send directly to SAPI. (Stas)

- Fixed sybase_fetch_*() to continue reading after CS_ROW_FAIL status (Timm)
- Fixed a bug inside dba_replace() that could cause file truncation with
  invalid keys. (Ilia)

- Fixed bug #46543 (ibase_trans() memory leaks when using wrong parameters).
  (Felipe)
- Fixed bug #46521 (Curl ZTS OpenSSL, error in config.m4 fragment).
  (jd at cpanel dot net)
- Fixed bug #44818 (php://memory writeable when opened read only). (Arnaud)
- Fixed bug #30312 (sybase_unbuffered_query calls). (Timm)

- Fixed stream_get_contents() when using $maxlength and socket is not
  closed. indeyets@php.net on #46049. (Arnaud)

06 Nov 2008, PHP 5.2.7RC3
- Added PHP_MAJOR_VERSION, PHP_MINOR_VERSION, PHP_RELEASE_VERSION,
  PHP_EXTRA_VERSION, PHP_VERSION_ID, PHP_ZTS and PHP_DEBUG constants. (Pierre)

- Updated timezone database to version 2008.9. (Derick)

- Fixed bug #46426 (offset parameter of stream_get_contents() does not work
  for "0"). (Felipe)
- Fixed bug #46406 (Unregistering nodeclass throws E_FATAL). (Rob)
- Fixed bug #46389 (NetWare needs small patch for _timezone).
  (patch by guenter@php.net)
- Fixed bug #46379 (Infinite loop when parsing '#' in one line file). (Arnaud)
- Fixed bug #46388 (stream_notification_callback inside of object destroys 
  object variables). (Felipe)
- Fixed bug #46381 (wrong $this passed to internal methods causes segfault). 
  (Tony)
- Fixed bug #46082 (stream_set_blocking() can cause a crash in some
  circumstances). (Felipe)
- Fixed bug #46064 (Exception when creating ReflectionProperty object on 
  dynamicly created property). (Felipe)
- Fixed bug #46024 (stream_select() doesn't return the correct number).
  (Arnaud)
- Fixed bug #45529 (new DateTimeZone() and date_create()->getTimezone() behave
  different). (Derick)